--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+//    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
+
+    //mysql
+    implementation 'mysql:mysql-connector-java:8.0.33'
+//    implementation 'com.mysql:mysql-connector-j'
 
     //jaksrta bean validation 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-validation'
