--- a/build.gradle
+++ b/build.gradle
@@ -54,9 +54,8 @@ dependencies {
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
-
-
-
+    //ElasticSearch
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 
 }
 
